Update certificates, modify IT page, update styles

--- a/IT/it.html
+++ b/IT/it.html
@@ -60,10 +60,15 @@
                 <button class="arrow left-arrow">&#10094;</button>
                 <div class="certificate-display">
                     <img src="../Data/MasterD_diploma.jpg" alt="MasterD Diploma" class="active">
-                    <img src="../Data/Critical_Thinking_page-0001.jpg" alt="Critical Thinking Certificate" class="active">
+                    <img src="../Data/whiteDwarfs.jpg" alt="whiteDwarfs" class="active">
+                    <img src="../Data/ParticlePhysics.jpg" alt="ParticlePhysics" class="active">
                     <img src="../Data/Leadership_page-0001.jpg" alt="Leadership Certificate" class="active">
-                    <img src="../Data/Certificate_phys1.jpg" alt="Phys1 Certificate" class="active">
                     <img src="../Data/Effective_Comunication_page-0001.jpg" alt="Effective Communication Certificate" class="active">
+                    <img src="../Data/UnsolvedProblemsInCosmology.jpg" alt="UnsolvedProblemsInCosmology" class="active">
+                    <img src="../Data/TheFormationOfExoplanets.jpg" alt="TheFormationOfExoplanets" class="active">
+                    <img src="../Data/Critical_Thinking_page-0001.jpg" alt="Critical Thinking Certificate" class="active">
+                    <img src="../Data/Certificate_phys1.jpg" alt="Phys1 Certificate" class="active">
+                    <img src="../Data/TheScienceOfNuclearEnergy.jpg" alt="TheScienceOfNuclearEnergy" class="active">
                 </div>
                 <button class="arrow right-arrow">&#10095;</button>
             </div>
